chore: adiciona teste com o PHP_CS

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,3 +24,8 @@ jobs:
               run: |
                 cd upload/system/library/PagSeguro
                 php vendor/bin/phpunit
+
+            - name: PHPCS
+              run: |
+                cd upload/system/library/PagSeguro
+                composer phpcs
