--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@vuepress/plugin-back-to-top": "^1.5.4",
     "@vuepress/plugin-medium-zoom": "^1.5.4",
     "vuepress": "^1.5.3"
   }
