--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,10 @@
 name: Test SDK with PHPUnit
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - develop
+      - master
+      - feature/sdk
 
 jobs:
     build:
