chore: adiciona .gitmessage

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,9 @@
 !/src/**
 !/package.json
 !/.gitignore
+!/.gitattribute
+!/.gitmessage
+!/README.md
 !/README.md
 
 /upload/system/library/PagSeguro/phpcs.phar
