--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Send emails
-        uses: ./github/actions/dispatch-newsletter
+        uses: ./.github/actions/dispatch-newsletter
         with:
           TOKEN: ${{ secrets.AUTHENTICATION }}
           URL: ${{ secrets.URL_NEWSLETTER }}
