--- a/.github/actions/dispatch-newsletter/action.yaml
+++ b/.github/actions/dispatch-newsletter/action.yaml
@@ -3,6 +3,8 @@ description: 'Envia e-mail com atualização'
 inputs:
   TOKEN:
     required: true
+  URL:
+    required: true
 runs:
   using: node12
   main: index.js
