ci: corrige gerador do codigo do modulo
Remove a execuçao do TDD do SDK ao comitar no branch develop

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,10 @@ name: Test SDK with PHPUnit
 on:
   push:
     branches:
-      - develop
-      - master
       - feature/sdk
+  push_request:
+    branches:
+      - master
 
 jobs:
     build:
