--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 !/upload/admin/language/en-gb/extension/payment/pagseguro*
 !/upload/admin/language/en-gb/extension/total/pagseguro*
 !/upload/admin/view/image/payment/pagseguro*
-!/upload/admin/view/template/sale/order_pagseguro.twig
+!/upload/admin/view/template/**/pagseguro*
 
 !/upload/catalog/controller/extension/payment/pagseguro*
 !/upload/catalog/controller/event/**/pagseguro*
