--- a/.github/workflows/build_config.yaml
+++ b/.github/workflows/build_config.yaml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   build:
+    name: Test and build file config
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -23,21 +24,14 @@ jobs:
         if: steps.cache-node-modules.outputs.cache-hit != 'true'
         run: npm install
 
-      - name: Upload 
-        uses: actions/upload-artifact@v2
-        with:
-          name: files.zip
-          path: .
-
-  test:
-    name: Running tests
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Download artifacts
-        uses: actions/download-artifact@v2
-        with:
-          name: files.zip
-
       - name: Test
         run: npm run test
+
+      - name: Build files
+        run: npm run build
+
+      - name: Push lib
+        run: |
+          git add .
+          git commit -m "ci: build files config"
+          git push
