ci: corrige _path_ do NPM

--- a/.github/workflows/build_config.yaml
+++ b/.github/workflows/build_config.yaml
@@ -15,7 +15,7 @@ jobs:
         id: cache-node-modules
         uses: actions/cache@v2
         with:
-          path: node-modules
+          path: ~/.npm
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
