--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Running Composer
-        uses: |
+        run: |
           cd upload/system/library/PagSeguro
           wget -qO- https://getcomposer.org/installer | php
           php composer.phar install --no-dev
