feat(config): adiciona suporte aa multiplas versoes de layout
Agora, eh possivel criar multiplos arquivos de temas para a forma de pagamento via credito e
escolher na pagina de configuraçao.
Essa modificaçao possibilitara que o usuario crie versoes diferentes para cada da festiva ou
adapte conforme seu publico ou tema

As informaçoes de como criar, estarao descritas na ([documentaçao](https://opencart-extension.github.io/PagSeguro-Checkout-Transparente/))

Signed-off-by: Valdeir S <contact@valdeir.dev>

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 !/upload/admin/model/extension/**/pagseguro*
 !/upload/admin/language/en-gb/extension/payment/pagseguro*
 !/upload/admin/language/en-gb/extension/total/pagseguro*
+!/upload/admin/view/image/pagseguro/**
 !/upload/admin/view/image/payment/pagseguro*
 !/upload/admin/view/template/**/pagseguro*
 
@@ -37,6 +38,7 @@
 /upload/system/library/PagSeguro/vendor
 /upload/system/library/PagSeguro/*.cache
 /upload/system/library/PagSeguro/log
+/upload/system/library/Spatie
 /node_modules
 /src/.vuepress/dist
 /upload/system/library/PagSeguro/tests
