test(actions): adiciona build do docker
Signed-off-by: Valdeir S <contact@valdeir.dev>

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@
 /upload/system/library/PagSeguro/log
 /node_modules
 /src/.vuepress/dist
+upload/system/library/PagSeguro/tests/server/package-lock.json
+upload/system/library/PagSeguro/tests/server/node_modules
