--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         strategy:
           matrix:
             operating-system: [ubuntu-latest]
-            php-versions: ['7.3']
+            php-versions: ['7.3', '8.0']
         steps:
             - name: Checkout
               uses: actions/checkout@v1
@@ -22,7 +22,7 @@ jobs:
             - name: Setup PHP
               uses: shivammathur/setup-php@v2
               with:
-                php-version: '7.3'
+                php-version: ${{ matrix.php-versions }}
 
             - name: Install Composer
               run: |
@@ -45,7 +45,7 @@ jobs:
             - name: Install PHPUnit e Dependencies
               run: |
                 cd upload/system/library/PagSeguro
-                composer install
+                composer install --ignore-platform-req php
                 composer require phpunit/phpunit
 
             - name: Build Docker Server
